@@ -5,8 +5,6 @@ import com.sports.server.command.game.domain.GameTeam;
 import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 public record GameDetailResponse(
         LocalDateTime startTime,
@@ -24,11 +22,10 @@ public record GameDetailResponse(
                 game.getGameQuarter(),
                 game.getName(),
                 game.getSport().getName(),
-                IntStream.range(0, gameTeams.size())
-                        .boxed()
-                        .sorted(Comparator.comparingLong(i -> gameTeams.get(i).getId()))
-                        .map(i -> new TeamResponse(gameTeams.get(i), i + 1))
-                        .collect(Collectors.toList())
+                gameTeams.stream()
+                        .sorted(Comparator.comparingLong(GameTeam::getId))
+                        .map(TeamResponse::new)
+                        .toList()
         );
     }
 
@@ -36,16 +33,14 @@ public record GameDetailResponse(
             Long gameTeamId,
             String gameTeamName,
             String logoImageUrl,
-            Integer score,
-            int order
+            Integer score
     ) {
-        public TeamResponse(GameTeam gameTeam, int order) {
+        public TeamResponse(GameTeam gameTeam) {
             this(
                     gameTeam.getId(),
                     gameTeam.getLeagueTeam().getName(),
                     gameTeam.getLeagueTeam().getLogoImageUrl(),
-                    gameTeam.getScore(),
-                    order
+                    gameTeam.getScore()
             );
         }
     }
