@@ -1,14 +1,11 @@
 package com.sports.server.query.dto.response;
 
-import com.sports.server.command.sport.domain.Sport;
 import com.sports.server.command.game.domain.Game;
 import com.sports.server.command.game.domain.GameTeam;
-
+import com.sports.server.command.sport.domain.Sport;
 import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 public record GameResponseDto(
         Long id,
@@ -24,11 +21,10 @@ public record GameResponseDto(
                 game.getStartTime(),
                 game.getGameQuarter(),
                 game.getName(),
-                IntStream.range(0, gameTeams.size())
-                        .boxed()
-                        .sorted(Comparator.comparingLong(i -> gameTeams.get(i).getId()))
-                        .map(i -> new GameResponseDto.TeamResponse(gameTeams.get(i), i + 1))
-                        .collect(Collectors.toList()),
+                gameTeams.stream()
+                        .sorted(Comparator.comparingLong(GameTeam::getId))
+                        .map(TeamResponse::new)
+                        .toList(),
                 sport.getName()
         );
     }
@@ -37,15 +33,14 @@ public record GameResponseDto(
             Long gameTeamId,
             String gameTeamName,
             String logoImageUrl,
-            Integer score,
-            int order
+            Integer score
     ) {
-        public TeamResponse(GameTeam gameTeam, int order) {
+        public TeamResponse(GameTeam gameTeam) {
             this(
                     gameTeam.getId(),
                     gameTeam.getLeagueTeam().getName(),
                     gameTeam.getLeagueTeam().getLogoImageUrl(),
-                    gameTeam.getScore(), order
+                    gameTeam.getScore()
             );
         }
     }
